优化file管理api
